[workspace]
resolver = "3"
members = [
    "benches",
    "book",
    "juniper_codegen",
    "juniper",
    "juniper_hyper",
    "juniper_rocket",
    "juniper_subscriptions",
    "juniper_graphql_ws",
    "juniper_warp",
    "juniper_actix",
    "juniper_axum",
    "tests/codegen",
    "tests/integration",
]
